<resources>
    <string name="app_name">WeatherForecastApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="Clouds">Clouds</string>
    <string name="Pressure">Pressure</string>
    <string name="windspeed">Wind Speed</string>
    <string name="weather">Sky Watch</string>
    <string name="city_name">City Name</string>
    <string name="dummy_date">13 Mar 2024</string>
    <string name="temp_celsius">°C</string>
    <string name="temp_fahrenheit">°F</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="dayName">Monday</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Alert</string>
    <string name="weatherTitle">Weather</string>
    <string name="gps">Gps</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="kelvin">Kelvin</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="milesPerHour">Mile/hour</string>
    <string name="meterPerSecond">Meter/sec</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="saveLocation">Save Location</string>
    <string name="weatherAppName">Sky Watch</string>

</resources>