<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="2">

    <!-- First MaterialCardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/humadityCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="15dp"
        app:cardElevation="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/humadityIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:roundPercent="0.9"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/humadityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Humidity"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humadityIcon" />

            <TextView
                android:id="@+id/humadityTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="77"
                android:textColor="@color/material_dynamic_primary0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humadityTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Second MaterialCardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/windSpeedCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="15dp"
        app:cardElevation="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/windIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:roundPercent="0.9"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/windTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/windspeed"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windIcon" />

            <TextView
                android:id="@+id/windTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="77"
                android:textColor="@color/material_dynamic_primary0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/windTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Third MaterialCardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pressureCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="15dp"
        app:cardElevation="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/pressureIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:roundPercent="0.9"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/pressureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Pressure"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressureIcon" />

            <TextView
                android:id="@+id/pressureTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="77"
                android:textColor="@color/material_dynamic_primary0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressureTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Fourth MaterialCardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fourthCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        app:contentPadding="15dp"
        app:cardElevation="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/cloudsIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:roundPercent="0.9"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/cloudsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Clouds"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/material_dynamic_primary0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cloudsIcon" />

            <TextView
                android:id="@+id/cloudsTextView"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="77"
                android:textColor="@color/material_dynamic_primary0"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cloudsTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</GridLayout>
